--- a/opensearch/docker-compose.yml
+++ b/opensearch/docker-compose.yml
@@ -4,12 +4,13 @@ services:
     image: opensearchproject/opensearch:2.6.0
     container_name: opensearch-node1
     environment:
+      - TZ=Asia/Tehran
       - cluster.name=opensearch-cluster
       - node.name=opensearch-node1
       - discovery.seed_hosts=opensearch-node1
       - cluster.initial_cluster_manager_nodes=opensearch-node1
       - bootstrap.memory_lock=true # along with the memlock settings below, disables swapping
-      - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m" # minimum and maximum Java heap size, recommend setting both to 50% of system RAM
+      - "OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g" # minimum and maximum Java heap size, recommend setting both to 50% of system RAM
     ulimits:
       memlock:
         soft: -1
@@ -18,7 +19,10 @@ services:
         soft: 65536 # maximum number of open files for the OpenSearch user, set to at least 65536 on modern systems
         hard: 65536
     volumes:
-      - opensearch-data1:/usr/share/opensearch/data
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+      - opensearch-data1:/usr/share/opensearch/data:rw
+      - /opt/opensearch-snapshots:/mnt/snapshots:rw
     ports:
       - 9200:9200
       - 9600:9600 # required for Performance Analyzer
@@ -39,7 +43,7 @@ services:
 
 volumes:
   opensearch-data1:
-  opensearch-data2:
+    driver: local
 
 networks:
   opensearch-net:
