--- a/opensearch/docker-compose.yml
+++ b/opensearch/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - cluster.initial_cluster_manager_nodes=opensearch-node1
       - bootstrap.memory_lock=true # along with the memlock settings below, disables swapping
       - "OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g" # minimum and maximum Java heap size, recommend setting both to 50% of system RAM
+      - path.repo=["/mnt/snapshots"]
     ulimits:
       memlock:
         soft: -1
