Add app config: oracle-xe, yugabytedb, opensearch

--- a/fluentd/docker-compose.yml
+++ b/fluentd/docker-compose.yml
@@ -5,18 +5,16 @@ services:
   fluentd:
     container_name: fluentd
     restart: always
-    image: chq/fluentd:v1.15
+    image: chq/fluentd:v1.16
     volumes:
-      - $PWD/fluent.conf:/fluentd/etc/fluent.conf:ro
+      - $PWD/fluent-opensearch.conf:/fluentd/etc/fluent.conf:ro
       # For reading/writing log files by fluentd
-      - /opt/logs:/opt/logs:ro
-      - /opt/logs/positions:/opt/logs/positions:rw
+      - /home/javad/TidDev/clr-returned-backend/log:/opt/logs:ro
+      - /home/javad/TidDev/clr-returned-backend/log/positions:/opt/logs/positions:rw
 #      - /etc/timezone:/etc/timezone:ro
 #      - /etc/localtime:/etc/localtime:ro
     environment:
       - TZ=Asia/Tehran
-      - LOKI_USERNAME=
-      - LOKI_PASSWORD=
     ports:
       - "24224:24224"
     # For giving plugins dir use -p <plugins_dir> option
