--- a/minio/conf/minio.conf
+++ b/minio/conf/minio.conf
@@ -1,4 +1,5 @@
-MINIO_ROOT_USER=admin
+3nNote: this user cannot be named "admin".
+MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin
 
 MINIO_VOLUMES="/mnt/data"
