--- a/minio/conf/minio.conf
+++ b/minio/conf/minio.conf
@@ -1,5 +1,7 @@
-3nNote: this user cannot be named "admin".
+# Note: this user cannot be named "admin".
 MINIO_ROOT_USER=minioadmin
-MINIO_ROOT_PASSWORD=minioadmin
+MINIO_ROOT_PASSWORD=$minio@dmin$235
+MINIO_ACCESS_KEY=Q3AM3ULO2867SPQQA43P2F
+MINIO_SECRET_KEY=zuf+tfteSluvtwRu7BJ86wekitnifILbZam1KYY3TGii
 
 MINIO_VOLUMES="/mnt/data"
