--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -19,7 +19,7 @@ x-minio-common: &minio-common
   environment:
     # Please refer to : https://min.io/docs/minio/linux/reference/minio-server/minio-server.html
     - MINIO_ROOT_USER=minioadmin
-    - MINIO_ROOT_PASSWORD=$minio@dmin$235
+    - MINIO_ROOT_PASSWORD=$$minio@dmin$$235  # Note: $ is escaped
     # WARNING: MINIO_ACCESS_KEY and MINIO_SECRET_KEY are deprecated. Please use MINIO_ROOT_USER and MINIO_ROOT_PASSWORD
     #- MINIO_ACCESS_KEY=Q3AM3ULO2867SPQQA43P2F
     #- MINIO_SECRET_KEY=zuf+tfteSluvtwRu7BJ86wekitnifILbZam1KYY3TGii
@@ -46,6 +46,3 @@ services:
       - type: bind
         source: ./data
         target: /data
-      - type: bind
-        source: ./conf/minio.conf
-        target: /etc/config.env
