Add graylog and other docs

--- a/fluentd/fluent-opensearch.conf
+++ b/fluentd/fluent-opensearch.conf
@@ -5,15 +5,17 @@
   path            /opt/logs/*.log
   ## There is one position file and each file marks placed in the one line of following file
   pos_file        /opt/logs/positions/fluentd-log.pos
-  time_format     %Y-%m-%dT%H:%M:%S
   tag             chq-apps-logs.*
 
   <parse>
     @type         json
     time_type     string
-    time_format   "%Y-%m-%dT%H:%M:%S.%N%z"    #  as in logs: ["@timestamp" : "2023-12-04T11:34:56.434+03:30"]
+    #time_format   "%Y-%m-%dT%H:%M:%S.%N%z"    #  as in logs: ["@timestamp" : "2023-12-04T11:34:56.434+03:30"]
     time_key      "@timestamp"
     keep_time_key true
+    #local_time    true
+    #utc          true
+    #timezone     "+03:30"
   </parse>
 </source>
 
@@ -29,13 +31,15 @@
 
 ## Note: this plugin is faster than record_transformer plugin.
 ## But it has limited features and needs to be installed:
+# [https://github.com/repeatedly/fluent-plugin-record-modifier]
 ## gem install fluent-plugin-record-modifier --no-document
-
 <filter chq-apps-logs.**>
   @type record_modifier
 
   ## remove thread_name, level_value, and @version keys from record
-  remove_keys thread_name, level_value, @version
+  ## Note: fields X-Span-Export, X-B3-SpanId, X-B3-TraceId have corresponding spanExportable, spanId, traceId fields in logs
+  ### Then removing theses duplicated fields
+  remove_keys thread_name, level_value, @version, X-Span-Export, X-B3-SpanId, X-B3-TraceId
 </filter>
 
 <match chq-apps-logs.**>
@@ -54,7 +58,8 @@
         @type memory
         flush_thread_count  2
         flush_mode          interval
-        flush_at_shutdown   true
+        ## Enabling this config will stuck application when stopping fluentd
+        #flush_at_shutdown   true
         flush_interval      5s
         chunk_limit_size    5m
         chunk_limit_records 500
@@ -72,6 +77,6 @@
 
   ## For more info on output formatting: [https://docs.fluentd.org/configuration/format-section#formatter-plugin-type]
   <format>
-    @type json
+    output_type  json
   </format>
 </match>
