--- a/graylog/docker-compose.yml
+++ b/graylog/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 services:
   mongodb:
       image: mongo:7.0.6
@@ -9,63 +9,6 @@ services:
         - /home/project/mongo/data:/data/db
       networks:
         - graylog-net
-
-  # opensearch:
-  #     image: opensearchproject/opensearch:2.9
-  #     container_name: opensearch
-  #     ports:
-  #       - "9200:9200"
-  #     volumes:
-  #       - ./opensearch-data:/usr/share/opensearch/data
-  #     environment:
-  #       - discovery.type=single-node
-  #       # `Xms` specifies the initial memory allocation pool. `Xmx` specifies the maximum allocation pool for the Java Virtual Machine (JVM). "m" and "g" obviously stand for MB and GB.
-  #       - ES_JAVA_OPTS=-Xms1g -Xmx1g
-  #       # TODO: The following security options need to be turned off, otherwise the connection cannot be made
-  #       - plugins.security.ssl.http.enabled=false
-  #       - plugins.security.disabled=true
-  #     networks:
-  #     - graylog-net
-
-  opensearch:
-    image: opensearchproject/opensearch:2.9.0
-    container_name: opensearch
-    environment:
-      - cluster.name=chq-cluster
-      - node.name=opensearch
-      - discovery.seed_hosts=opensearch
-      - cluster.initial_cluster_manager_nodes=opensearch
-      - bootstrap.memory_lock=true  # along with the memlock settings below, disables swapping
-      - OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g  # minimum and maximum Java heap size, recommend setting both to 50% of system RAM
-      - OPENSEARCH_INITIAL_ADMIN_PASSWORD=admin@tata
-      #- OPENSEARCH_INITIAL_ADMIN_PASSWORD=${OPENSEARCH_INITIAL_ADMIN_PASSWORD}    # Sets the demo admin user password when using demo configuration, required for OpenSearch 2.12 and higher
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 65536  # maximum number of open files for the OpenSearch user, set to at least 65536 on modern systems
-        hard: 65536
-    volumes:
-      - ./opensearch-data:/usr/share/opensearch/data
-    ports:
-      - 9200:9200
-      - 9600:9600  # required for Performance Analyzer
-    networks:
-      - graylog-net
-
-  opensearch-dashboards:
-    image: opensearchproject/opensearch-dashboards:2.9.0
-    container_name: opensearch-dashboards
-    ports:
-      - 5601:5601
-    expose:
-      - '5601'
-    environment:
-      OPENSEARCH_HOSTS: '["https://opensearch:9200"]'
-    networks:
-      - graylog-net
-
 
   graylog:
       image: graylog/graylog:5.2
@@ -98,4 +41,4 @@ services:
 
 networks:
   graylog-net:
-      driver: bridg
+      driver: bridge
