--- a/fluentd/opensearch/fluent-opensearch.conf
+++ b/fluentd/opensearch/fluent-opensearch.conf
@@ -1,24 +1,30 @@
+## For debugging purposes
+<source>
+    @type dummy
+    tag dummy
+    dummy {"hello":"world"}
+</source>
+
 <source>
   @type           tail
   read_from_head  true
   ## Note: you can provide several file paths separated by comma.
   path            /opt/logs/*.log
   ## There is one position file and each file marks placed in the one line of following file
-  pos_file        /opt/logs/positions/fluentd-log.pos
+  pos_file        /opt/positions/fluentd-log.pos
   tag             chq-apps-logs.*
 
   <parse>
-    @type         json
-    time_type     string
+    @type          json
+    time_type      string
     #time_format   "%Y-%m-%dT%H:%M:%S.%N%z"    #  as in logs: ["@timestamp" : "2023-12-04T11:34:56.434+03:30"]
-    time_key      "@timestamp"
-    keep_time_key true
+    time_key       "@timestamp"
+    keep_time_key  true
     #local_time    true
-    #utc          true
-    #timezone     "+03:30"
+    #utc           true
+    #timezone      "+03:30"
   </parse>
 </source>
-
 
 ## Note: you can remove this filter and use record_modifier for simple use cases
 <filter chq-apps-logs.**>
@@ -27,7 +33,6 @@
   # remove unnecessary fields
   remove_keys ["thread_name", "level_value", "@version"]
 </filter>
-
 
 ## Note: this plugin is faster than record_transformer plugin.
 ## But it has limited features and needs to be installed:
@@ -40,6 +45,15 @@
   ## Note: fields X-Span-Export, X-B3-SpanId, X-B3-TraceId have corresponding spanExportable, spanId, traceId fields in logs
   ### Then removing theses duplicated fields
   remove_keys thread_name, level_value, @version, X-Span-Export, X-B3-SpanId, X-B3-TraceId
+</filter>
+
+<filter chq-apps-logs.**>
+  @type grep
+
+  <exclude>
+    key sendFile
+    pattern /false/
+  </exclude>
 </filter>
 
 <match chq-apps-logs.**>
