Fluentd: add rewrite_tag and gelf plugins

--- a/fluentd/opensearch/fluent-opensearch.conf
+++ b/fluentd/opensearch/fluent-opensearch.conf
@@ -2,7 +2,7 @@
 <source>
     @type dummy
     tag dummy
-    dummy {"hello":"world"}
+    dummy {"@timestamp":"2024-03-04T23:08:50.449+03:30","@version":"1","message":"simple test message","logger_name":"com.tjb.clr.draw.web.ExceptionControllerAdvice","thread_name":"http-nio-9092-exec-4","level":"INFO","level_value":20000,"applicationName":"clr-draw","traceId":"46e71c8e8c65e215","spanId":"46e71c8e8c65e215","spanExportable":"false","X-Span-Export":"false","X-B3-SpanId":"46e71c8e8c65e215","X-B3-TraceId":"46e71c8e8c65e215"}
 </source>
 
 <source>
@@ -51,7 +51,7 @@
   @type grep
 
   <exclude>
-    key sendFile
+    key sendLog
     pattern /false/
   </exclude>
 </filter>
@@ -83,14 +83,57 @@
     </buffer>
 </match>
 
+<match apache.access>
+  @type rewrite_tag_filter
+  capitalize_regex_backreference no
+
+  ## If send to file is false don't send to log collector
+  <rule>
+    key     sendLog
+    pattern /false/
+    tag     clear
+  </rule>
+  <rule>
+    key     sensitivity
+    pattern /(low|medium|high)$/
+    tag     sensitivity.$1.${tag}
+  </rule>
+  <rule>
+    key     level
+    pattern /ERROR/
+    tag     error.${tag}
+  </rule>
+  ## You need to have a unmatch case otherwise record tag will be cleared!
+  <rule>
+    key     message
+    pattern /.*/
+    tag     all.${tag}
+  </rule>
+</match>
+
+<match clear>
+  @type null
+</match>
 
 ### For debugging purpose you can send log to output
 <match chq-apps-logs.**>
   @type stdout
-  @id stdout_output
+  @id   stdout_output
 
   ## For more info on output formatting: [https://docs.fluentd.org/configuration/format-section#formatter-plugin-type]
   <format>
     output_type  json
   </format>
+</match>
+
+## Send to Graylog
+## Note: Fluentbit GELF plugin seems to be much richer e.g. TLS, etc, you can forward logs to fluentbit and it send to graylog.
+<match graylog2.**>
+  @type gelf
+  host localhost
+  port 12201
+  protocol tcp
+  <buffer>
+    flush_interval 5s
+  </buffer>
 </match>
