--- a/opensearch/docker/docker-compose.yml
+++ b/opensearch/docker/docker-compose.yml
@@ -1,50 +1,68 @@
-version: '3'
+version: "3.8"
+
 services:
-  opensearch-node1:
-    image: opensearchproject/opensearch:2.6.0
-    container_name: opensearch-node1
+  opensearch:
+    image: "opensearchproject/opensearch:2.9.0"
+    ### Note: hostname(e.g. opensearch1) is defined added to certificates file (keystore.jks) and changing it may break SSL hostname checking!
+    hostname: "opensearch1"
     environment:
-      - TZ=Asia/Tehran
-      - cluster.name=opensearch-cluster
-      - node.name=opensearch-node1
-      - discovery.seed_hosts=opensearch-node1
-      - cluster.initial_cluster_manager_nodes=opensearch-node1
-      - bootstrap.memory_lock=true # along with the memlock settings below, disables swapping
-      - "OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g" # minimum and maximum Java heap size, recommend setting both to 50% of system RAM
-      - path.repo=["/mnt/snapshots"]
+      - "OPENSEARCH_JAVA_OPTS=-Xms4096m -Xmx4096m"
+      - "network.host=opensearch1"
+      - "node.name=opensearch1"
+      - "cluster.name=opensearch-cluster"
+      - "network.bind_host=_site_"
+      #- "discovery.seed_hosts=opensearch2,opensearch3"   # list of the other nodes of the cluster
+      - "cluster.initial_master_nodes=opensearch1"
+      #- "discovery.type=single-node" # For single node mode
+      - "bootstrap.memory_lock=true"
+      - "action.auto_create_index=false"
+      - "DISABLE_INSTALL_DEMO_CONFIG=true"
+      - "plugins.security.allow_unsafe_democertificates=true"
+        #      - "plugins.security.ssl.transport.enforce_hostname_verification=false"
+        #      - "plugins.security.ssl.transport.resolve_hostname=false"
+      - "OPENSEARCH_INITIAL_ADMIN_PASSWORD=admin@tata$$123"   ### Opensearch 2.12+, you need to escape $ i password
+      - "TZ=Asia/Tehran"
+    ports:
+      - "9200:9200"       # OpenSearch Http(s) REST API
+      - "9300:9300"       # OpenSearch Transport API
     ulimits:
       memlock:
-        soft: -1
         hard: -1
+        soft: -1
       nofile:
-        soft: 65536 # maximum number of open files for the OpenSearch user, set to at least 65536 on modern systems
+        soft: 65536
         hard: 65536
     volumes:
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
-      - opensearch-data1:/usr/share/opensearch/data:rw
-      - /opt/opensearch-snapshots:/mnt/snapshots:rw
-    ports:
-      - 9200:9200
-      - 9600:9600 # required for Performance Analyzer
+      - "./opensearch-data:/usr/share/opensearch/data"
+      - "./root-ca.pem:/usr/share/opensearch/config/root-ca.pem"
+      - "./node1.pem:/usr/share/opensearch/config/node.pem"
+      - "./node1-key.pem:/usr/share/opensearch/config/node-key.pem"
+      - "./admin.pem:/usr/share/opensearch/config/admin.pem"
+      - "./admin-key.pem:/usr/share/opensearch/config/admin-key.pem"
+      - "./keystore.jks:/usr/share/opensearch/config/keystore.jks"
+      - "./custom-opensearch.yml:/usr/share/opensearch/config/opensearch.yml"
+      - "./opensearch-security-config.yml:/usr/share/opensearch/config/opensearch-security/config.yml"
+      - "/etc/localtime:/etc/localtime:ro"   # timezone of container host
     networks:
       - opensearch-net
 
   opensearch-dashboards:
-    image: opensearchproject/opensearch-dashboards:2.6.0
+    image: opensearchproject/opensearch-dashboards:2.9.0
     container_name: opensearch-dashboards
     ports:
       - 5601:5601
     expose:
-      - "5601"
+      - '5601'
     environment:
-      OPENSEARCH_HOSTS: '["https://opensearch-node1:9200"]'
+      TZ: "Asia/Tehran"
+      OPENSEARCH_HOSTS: '["https://opensearch:9200"]'
+    volumes:
+      - ./custom-opensearch_dashboards.yml:/usr/share/opensearch-dashboards/config/opensearch_dashboards.yml
+    depends_on:
+      - opensearch
     networks:
       - opensearch-net
 
-volumes:
-  opensearch-data1:
-    driver: local
-
 networks:
   opensearch-net:
+      driver: bridge
