--- a/fluentd/opensearch/fluent-opensearch.conf
+++ b/fluentd/opensearch/fluent-opensearch.conf
@@ -47,6 +47,7 @@
   remove_keys thread_name, level_value, @version, X-Span-Export, X-B3-SpanId, X-B3-TraceId
 </filter>
 
+## For including or excluding records based on key value
 <filter chq-apps-logs.**>
   @type grep
 
@@ -137,3 +138,17 @@
     flush_interval 5s
   </buffer>
 </match>
+
+## for debugging purposes
+<filter all.**>
+  @type stdout
+  @id stdout_filter
+
+  <inject>
+     worker_id_key
+  </inject>
+
+  <format>
+    output_type  json
+  </format>
+</filter>
