Update fluentbit config file

--- a/fluentbit/custom_parsers.conf
+++ b/fluentbit/custom_parsers.conf
@@ -3,3 +3,5 @@
     Format      json
     Time_Key    @timestamp
     Time_Format %Y-%m-%dT%H:%M:%S.%L%z
+    ## Keep @timestamp field in the record
+    Time_Keep   On
