--- a/fluentbit/fluent-bit.conf
+++ b/fluentbit/fluent-bit.conf
@@ -2,11 +2,6 @@
     parsers_file /fluent-bit/etc/custom_parsers.conf
 
 [INPUT]
-    Name dummy
-    Dummy {"endpoint":"localhost", "value":"something", "sensitivity": "high", "@timestamp", "2021-12-10T10:22:33.123+03:30"}
-    Tag dummy
-
-[INPUT]
     Name              tail
     Path              /opt/logs/*.log
     Parser            json
@@ -16,20 +11,72 @@
     Skip_Long_Lines   Off
     # The interval of refreshing the list of watched files in seconds (For watching new files).
     Refresh_Interval  10
-    Tag               chq.*
+    Skip_Empty_Lines  On
+    Inotify_Watcher   false
+    Tag               chq*
+
+## For json based spring log files (logback-logstash-encoder)
+[FILTER]
+    Name record_modifier
+    Match chq*
+    ## Add additional fields
+    #Record hostname ${HOSTNAME}   ## FIXME not working inside docker container
+    Record hostname  server-119
+    ## Remove extra fields
+    Remove_key  thread_name
+    Remove_key  level_value
+    Remove_key  @version
+    Remove_key  X-Span-Export
+    Remove_key  X-B3-SpanId
+    Remove_key  X-B3-TraceId
 
 [FILTER]
+    Name   grep
+    Match  chq*
+    ## FIXME it does not match non-string(i.e. boolean fields)
+    Exclude  sendLog false
+
+##
+## Note:  log levels must be changed based on syslog severity level
+## https://en.wikipedia.org/wiki/Syslog#Severity_level
+## ERROR  =>  ERR
+## WARN   =>  WARNING
+[FILTER]
+    Name    modify
+    Match   chq*
+    Condition Key_Value_Equals level ERROR
+    set     level   ERR
+
+
+## Warning: $TAG must NOT prefix the new tag, otherwise fluentbit crashes!!
+[FILTER]
     Name          rewrite_tag
-    Match         test_tag
-    Rule          $sensitivity ^(sensitivity)$  $TAG.sensitivity.$sensitivity false
+    Match         chq*
+    Rule          $sensitivity ^(high|medium|low)$  sensitivity.$sensitivity.$TAG false
     Emitter_Name  re_emitted
 
-[PARSER]
-    Name        json
-    Format      json
-    Time_Key    @timestamp
-    Time_Format %Y-%m-%dT%H:%M:%S.%L%z
+[FILTER]
+    Name    modify
+    Match   chq*
+    Condition Key_Value_Equals level WARN
+    set     level   WARNING
 
+
+## Send graylog by GELF Protocol
 [OUTPUT]
-    name   stdout
-    match  *
+    Name        gelf
+    Match       chq*
+    Host        192.168.61.139
+    Port        12201
+    # tcp, udp, tls
+    Mode        tcp
+    # According to GELF message format following fields must be set
+    Gelf_Short_Message_Key message
+    Gelf_Host_Key         hostname
+    ## Note: Not needed! by default it gets timestamp field of fluent-bit
+    #Gelf_Timestamp_Key   @timestamp
+
+## For debugging purposes
+[OUTPUT]
+    Name   stdout
+    Match  *
