--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.7'
 
 # Common configurations for all containers
 x-minio-common: &minio-common
-  image: minio/minio:RELEASE.2023-10-25T06-33-25Z
+  image: quay.io/minio/minio:RELEASE.2024-04-06T05-26-02Z
+  container_name: minio
   command: |
     server                                       
     --console-address ":9090"                             
@@ -18,6 +19,7 @@ x-minio-common: &minio-common
     - "8022:8022"
   networks:
     - minio-net
+  restart: always
   environment:
     - TZ=Asia/Tehran
     # Please refer to : https://min.io/docs/minio/linux/reference/minio-server/minio-server.html
@@ -49,9 +51,7 @@ services:
     volumes:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
-      - type: bind
-        source: ./data
-        target: /data
+      - ./data:/data:rw
 
 #  minio-client:
 #    image: quay.io/minio/mc:RELEASE.2023-09-22T05-07-46Z
